--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       objectType: 'feed',
       content: {
         title: '선착순 선물 게임을 시작합니다! 기회는\n단 10분간, 선착순 2명에게!',
-//         description: '아래 버튼을 통해 비밀번호를 변경하세요.\n- 마지막 비밀번호 변경일 2021-05-24 \n \n2단계 인증을 설정하고 비밀번호를 변경하세요.\n- 2단계 인증: 사용 안 함 \n \n현재 허용하지 않은 국가에서 로그인이 되었습니다. \n- 접속된 아이피: 117.111.200.123',
+        description: '아래 버튼을 통해 비밀번호를 변경하세요.\n- 마지막 비밀번호 변경일 2021-05-24 \n \n2단계 인증을 설정하고 비밀번호를 변경하세요.\n- 2단계 인증: 사용 안 함 \n \n현재 허용하지 않은 국가에서 로그인이 되었습니다. \n- 접속된 아이피: 117.111.200.123',
         imageUrl:
           'https://img.hankyung.com/photo/202004/d744af8c6b5cbe6d52746566f5ccb4ed.jpg',
         link: {
