--- a/index.html
+++ b/index.html
@@ -1,42 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>카카오톡 버튼있는 메시지 전송하기</title>
-<script id="javascript-sdk" src="https://developers.kakao.com/sdk/js/kakao.min.js%22%3E</script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-<p><strong>아래 카카오톡 아이콘을 눌러 전송하세요</strong> By. Blackcats4567</p>
-<a id="kakao-link-btn" href="javascript:sendLink()">
-  <img
-    src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"
-  />
-</a>
-<script type="text/javascript">
- Kakao.init('89b84d54e62b728a14209bc30212381a');
-  function sendLink() {
-    Kakao.Link.sendDefault({
-      objectType: 'feed',
-      content: {
-        title: '선착순 선물 게임을 시작합니다! 기회는\n단 10분간, 선착순 2명에게!',
-//         description: '아래 버튼을 통해 비밀번호를 변경하세요.\n- 마지막 비밀번호 변경일 2021-05-24 \n \n2단계 인증을 설정하고 비밀번호를 변경하세요.\n- 2단계 인증: 사용 안 함 \n \n현재 허용하지 않은 국가에서 로그인이 되었습니다. \n- 접속된 아이피: 117.111.200.123',
-        imageUrl:
-          'https://img.hankyung.com/photo/202004/d744af8c6b5cbe6d52746566f5ccb4ed.jpg',
-        link: {
-          mobileWebUrl: 'https://docs.google.com/document/d/1Lukb_UNdfsO5NpRdsLxQpZQVRIuCjlgmRFk-4M4HtQI/edit?usp=sharing', 
-          webUrl: 'https://docs.google.com/document/d/1Lukb_UNdfsO5NpRdsLxQpZQVRIuCjlgmRFk-4M4HtQI/edit?usp=sharing',
-        },
-      buttons: [
-        {
-          title: '지금 달려가기',
-          link: {
-            mobileWebUrl: 'https://docs.google.com/document/d/1Lukb_UNdfsO5NpRdsLxQpZQVRIuCjlgmRFk-4M4HtQI/edit?usp=sharing',
-            webUrl: 'https://docs.google.com/document/d/1Lukb_UNdfsO5NpRdsLxQpZQVRIuCjlgmRFk-4M4HtQI/edit?usp=sharing',
-          },
-        },
-      ],
-    })
-  }
-</script>
-<!-- www.blackcats4567.com -->
-<!-- 이미지/버튼 클릭 시 주소는 Kakao Developers의 애플리케이션 > 플랫폼 > Web에 넣어야 클릭했을때 성공적으로 표시됩니다 -->
-  </body>
+    
+</body>
 </html>
